# evidence-span-claim-validation

./: .env.example  .gitignore  README.md  evidence_span_claim_validation_implementation_plan.md  pyproject.toml
configs/: modalities.yaml  models.yaml  pipeline.yaml  predicates.yaml  validation.yaml
prompts/: extract_claims.audio.md  extract_claims.chat.md  extract_claims.image_region.md  extract_claims.pdf.md
src/evidence_pipeline/: __init__.py  __main__.py  artifact_validation.py  cli.py  config.py  demo.py  ids.py  jobs.py  jsonl.py  logging.py  model_routing.py  retention.py
src/evidence_pipeline/chunking/: __init__.py  audio_chunker.py  chat_chunker.py  image_ocr_chunker.py  pdf_chunker.py
src/evidence_pipeline/extraction/: __init__.py  claim_extractor.py  image_classifier.py  llm_client.py
src/evidence_pipeline/ingest/: __init__.py  audio.py  audio_evidence.py  chat.py  image.py  (+5 more)
tests/: test_acceptance.py  test_audio_pipeline.py  test_chat_pipeline.py  test_claim_validation.py  test_cli.py  test_dedupe.py  test_demo_seed.py  test_generic_stage_commands.py  test_gold_eval.py  test_ids.py  test_image_classification.py  test_image_clustering.py  test_image_ocr.py  test_image_pipeline.py  test_jobs.py  test_jsonl.py  test_llm_client.py  test_metta_export.py  test_model_routing.py  test_normalization.py  test_normalized_and_quarantine_schemas.py  test_pdf_pipeline.py  test_pii.py  test_privacy.py  test_repair.py  test_retention.py  test_review.py  test_runner_commands.py  test_schema_repair_import.py  test_schemas.py  test_sqlite_export.py  test_summary.py
(+42 files in other folders)
