[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-span-claim-validation"
version = "0.1.0"
description = "Evidence-anchored claim extraction and validation pipeline foundation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
evidence-pipeline = "evidence_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
